fixed mov file not working on mobile

--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -184,4 +184,11 @@
     .mainLogoBox {
         display: none;
     }
+    .inlineImage {
+        display: none;
+    }
+    .col-1of3-aside {
+        padding: 0;
+        margin: 0 auto 50px;
+    }
 }
